--- a/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/wwwroot/css/site.css
+++ b/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/wwwroot/css/site.css
@@ -16,3 +16,60 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.buttoncontainer {
+    margin-top: 15px;
+    display: inline-block;
+    border-radius: 20px;
+    border: 1.5px solid green;
+   padding: 15px;
+}
+
+.buttoncontainer table {
+    width: 100%;
+    border-spacing: 100px;
+}
+
+    .buttoncontainer table th,
+    .buttoncontainer table td {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin: 100px;
+    }
+
+.buttoncontainer table th {
+    border-bottom: 1px solid white;
+}
+
+.buttoncontainer table td {
+    border-bottom: 1px solid green;
+}
+
+.buttoncontainer table tbody tr:last-child td {
+    border-bottom: none;
+}
+
+/*.buttoncontainer table td.downarrow {
+    position: relative;
+    left: 0px;
+    top: -15px;
+}*/
+
+    /*table tr td:nth-child(2) {
+        padding-left: 200px;*/ /* adjust the padding value as needed */
+    /*}*/
+
+.transactionbuttoncontainer {
+    display: inline-block;
+    border-radius: 20px;
+    border: 1.5px solid green;
+    padding: 30px;
+    margin-right: 30px;
+}
+
+    .transactionbuttoncontainer table th,
+    .transactionbuttoncontainer table td{
+        padding-left: 20px;
+    }
