--- a/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/wwwroot/css/site.css
+++ b/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/wwwroot/css/site.css
@@ -60,6 +60,8 @@ body {
     /*table tr td:nth-child(2) {
         padding-left: 200px;*/ /* adjust the padding value as needed */
     /*}*/
+    
+    /*
 
 .transactionbuttoncontainer {
     display: inline-block;
@@ -72,4 +74,4 @@ body {
     .transactionbuttoncontainer table th,
     .transactionbuttoncontainer table td{
         padding-left: 20px;
-    }
+    }*/
