--- a/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/wwwroot/css/site.css
+++ b/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/wwwroot/css/site.css
@@ -17,13 +17,22 @@ body {
   margin-bottom: 60px;
 }
 
+.buttons select{
+    width: 300px
+}
+
 .buttoncontainer {
-    margin-top: 15px;
     display: inline-block;
+    position: relative;
+    left: 25%;
+    transform: translateX(-50%);
+    margin-top: 30px;
+    margin-right: 150px;
     border-radius: 20px;
     border: 1.5px solid green;
-   padding: 15px;
-
+    padding: 15px;
+    text-align: center;
+    width: 494.167px;
 }
 
 .buttoncontainer table {
@@ -54,31 +63,8 @@ body {
     border-bottom: none;
 }
 
-    .buttoncontainer .btn.btn-outline-primary {
-        inline-size: 150px;
-        overflow-wrap: break-word;
-    }
-/*.buttoncontainer table td.downarrow {
-    position: relative;
-    left: 0px;
-    top: -15px;
-}*/
-
-    /*table tr td:nth-child(2) {
-        padding-left: 200px;*/ /* adjust the padding value as needed */
-    /*}*/
-    
-    /*
-
-.transactionbuttoncontainer {
+.buttoncontainer .btn.btn-outline-primary {
+    inline-size: 200px;
+    overflow-wrap: break-word;
     display: inline-block;
-    border-radius: 20px;
-    border: 1.5px solid green;
-    padding: 30px;
-    margin-right: 30px;
 }
-
-    .transactionbuttoncontainer table th,
-    .transactionbuttoncontainer table td{
-        padding-left: 20px;
-    }*/
