--- a/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/Views/Transactions/Index.cshtml
+++ b/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/Views/Transactions/Index.cshtml
@@ -52,8 +52,94 @@
                 <td>@transaction.Date</td>
                 <td>@transaction.Name</td>
                 <td>@transaction.Value</td>
+                <td>
+                    <a button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal" onclick="showDeleteModal()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                        </svg>
+                    </a>
+
+                        <a button type="button" class="btn btn-primary" data-toggle="modal" data-target="#updateModal" onclick="showUpdateModal()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                                <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z" />
+                            </svg>
+                        </svg>
+                    </a>
+                </td>
+
+                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Modal title</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are you sure you want to delete this transaction?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <form method="post" asp-action="DeleteTransaction" asp-route-id="@transaction.Id">
+                                    <button type="submit" class="btn btn-primary">Yes</button>
+                                </form>
+                                <a type="button" class="btn btn-secondary" data-dismiss="modal">No</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="addTransactionModalLabel">Modal title</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form asp-action="UpdateTransaction" method="post">
+                                    <input type="hidden" asp-for="@transaction.Id" value="@transaction.Id">
+                                    <label>Date</label>
+                                    <input type="datetime-local" placeholder="Date" asp-for="Transaction.Date">
+                                    <br />
+                                    <label>Name</label>
+                                    <input type="text" placeholder="Name" asp-for="Transaction.Name">
+                                    <br />
+                                    <label>Category</label>
+                                    <select asp-for="Transaction.CategoryId" asp-items="Model.CategorySelectList"></select>
+                                    <br />
+                                    <label>Value</label>
+                                    <input type="number" placeholder="Value" asp-for="Transaction.Value">
+                                    <br />
+                                    <label>Currency</label>
+                                    <select asp-for="CurrencyObjectJson" asp-items="Model.CurrencySelectList"></select>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </tr>  
         }
     }
     </tbody>
 </table>
+
+@section Scripts{
+    <script>
+        function showDeleteModal() {
+            $('#deleteModal').modal('show');
+        }
+
+        function showUpdateModal() {
+            $('#updateModal').modal('show');
+        }
+    </script>
+}
