--- a/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/Views/Categories/Index.cshtml
+++ b/MVC.Budget.JsPeanut/MVC.Budget.JsPeanut/Views/Categories/Index.cshtml
@@ -16,25 +16,36 @@
         </svg>
         Transaction history
     </a>
-    <form asp-action="UpdateCurrency" method="post">
-        <select asp-for="CurrencyObjectJson" asp-items="Model.CurrencySelectList" class="form-control" style="margin-top: 13px;">
-            <option value="" selected disabled>Select your default currency</option>
-        </select>
-        <input type="submit" value="Submit"/>
+    @*<button button type="button" class="btn btn-success" asp-action="SortBy" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Sort by
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" asp-page="./Index" asp-route-sorttype="Today">Larger value</a>
+        <a class="dropdown-item" asp-page="./Index" asp-route-sorttype="Yesterday">Smaller value</a>
+    </div>*@
+
+    <button button type="button" class="btn btn-success" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Show spendings by date
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" asp-action="Index" asp-route-timeline="Default">Default</a>
+        <a class="dropdown-item" asp-action="Index" asp-route-timeline="LastMonth">Last month</a>
+        <a class="dropdown-item" asp-action="Index" asp-route-timeline="LastThreeMonths">Last 3 months</a>
+        <a class="dropdown-item" asp-action="Index" asp-route-timeline="LastSixMonths">Last 6 months</a>
+        <a class="dropdown-item" asp-action="Index" asp-route-timeline="LastYear">Last year</a>
+        <a class="dropdown-item search-link" asp-action="Index">Search for date</a>
+    </div>
+
+    <form class="search" style="display: none;" asp-action="Index" asp-route-searchstringone="@Model.SearchStringOne" asp-route-searchstringtwo="@Model.SearchStringTwo" style="display: none; margin-top: -10px;">
+        <p style="margin: 1em 0 1em 0;"> Starting date: <input type="text" id="searchInput" asp-for="SearchStringOne" /> </p>
+        <p style="margin: 1em 0 1em 0;"> End date: <input type="text" id="searchInput" asp-for="SearchStringTwo" /> <input type="submit" value="Filter" /> </p>
     </form>
-    <small id="emailHelp" class="form-text text-muted">The value of each category will be displayed in that currency. Regardless of that, you can still use another currencies for your transactions</small>
-    @{
-        if (ViewBag.Currency != "")
-        {
-            <h6>Your default currency is @ViewBag.Currency</h6>
-        }
-    }
 
     <div class="modal fade" id="addTransactionModal" tabindex="-1" role="dialog" aria-labelledby="addTransactionModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="addTransactionModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="addTransactionModalLabel">Add a new transaction</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -54,7 +65,7 @@
                         <input type="number" placeholder="Value" asp-for="Transaction.Value">
                         <br />
                         <label>Currency</label>
-                        <select asp-for="Transaction.CurrencyNativeSymbol" asp-items="Model.CurrencySelectList"></select>
+                        <select asp-for="CurrencyObjectJson" asp-items="Model.CurrencySelectList"></select>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Save changes</button>
@@ -64,6 +75,30 @@
             </div>
         </div>
     </div>
+    <div class="select-container">
+    <form asp-action="UpdateCurrency" method="post" class="selectcurrencyform">
+        <select name="selectedCurrency" asp-items="Model.CurrencySelectList" class="form-control" style="margin-top: 13px;">
+            @{
+                if (ViewBag.Currency != null)
+                {
+                    <option value="" selected disabled>Select your default currency (Current one is @ViewBag.Currency)</option>
+                }
+                else
+                {
+                    <option value="" selected disabled>Select your default currency</option>
+                }
+            }
+        </select>
+        <input type="button" class="btn btn-outline-success" value="Submit" style="margin-top: 13px;" />
+    </form>
+    <small id="selectcurrencyHelp" class="form-text text-muted">The value of each category will be displayed in that currency. Regardless of that, you can still use another currencies for your transactions</small>
+    </div>
+</div>
+
+
+
+<div>
+    
 </div>
 
     @foreach (var category in Model.Categories)
@@ -72,7 +107,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>Category</th>
+                    <th></th>
                     <th>Name</th>
                     <th>Total value</th>
                 </tr>
@@ -80,7 +115,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <img src="@category.ImageUrl" width="50px" height="50px">
+                        <img src="@category.ImageUrl" class="category-image">
                     </td>
                     <td>@category.Name</td>
                     @{
@@ -100,8 +135,15 @@
                 </tr>
             </tbody>
         </table>
-        <button class="btn btn-outline-primary" data-toggle="modal" data-target="addCategoryTransactionModal" style="margin-top: 6px; padding: 5px 11px; height: 60px;" onclick="showCategoryTransactionModal()">Add @category.Name transaction</button>
-        <button class="btn btn-outline-primary" style="margin-top: 6px; padding: 5px 11px; height: 60px;" onclick="location.href='@Url.Action("Index", "Transactions", new { id = category.Id, name = category.Name, imageurl = category.ImageUrl })'">Manage @category.Name transactions</button>
+        @*<button class="btn btn-success" data-toggle="modal" data-target="addCategoryTransactionModal" style="margin-top: 6px; padding: 5px 11px; height: 38px;" onclick="showCategoryTransactionModal()">Add transaction</button>
+*@
+        <a button type="button" class="btn btn-success" data-toggle="modal" data-target="addCategoryTransactionModal" style="margin-top: 6px; padding: 5px 11px;" onclick="showCategoryTransactionModal()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
+            </svg>
+            New transaction
+        </a>
+        <button class="btn btn-outline-success" style="margin-top: 6px; padding: 5px 11px; height: 38px;" onclick="location.href='@Url.Action("Index", "Transactions", new { id = category.Id, name = category.Name, imageurl = category.ImageUrl })'">Manage transactions</button>
     </div>
 }
 
@@ -140,7 +182,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addTransactionModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="addTransactionModalLabel">Add a new transaction</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -174,6 +216,16 @@
 
 @section Scripts{
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var searchLink = document.querySelector('.search-link');
+            var searchForm = document.querySelector('.search');
+
+            searchLink.addEventListener('click', function (e) {
+                e.preventDefault();
+                searchForm.style.display = 'block';
+            });
+        });
+
         function showTransactionModal() {
             $('#addTransactionModal').modal('show');
         }
