Most functions are done, just frontend left.
Most of the features are done except frontend, Search and Filter.

--- a/MVCBudget.Forser/Views/Home/Index.cshtml
+++ b/MVCBudget.Forser/Views/Home/Index.cshtml
@@ -30,5 +30,6 @@
     </div>
 </div>
 
-<partial name="_AddCategoryPartial.cshtml" />
+<partial name="_AddCategoryPartial.cshtml" model="new Category()" />
 <partial name="_ListCategoriesPartial.cshtml" />
+<partial name="_CreateTransactionPartial.cshtml" model="new Transaction()" />
