--- a/MVCBudget.Forser/Views/Shared/_Layout.cshtml
+++ b/MVCBudget.Forser/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                     <a class="navbar-brand fs-3 fw-bold" asp-controller="Home" asp-action="Index"><i class="bi bi-coin"></i> Budget Application</a>
                     <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#AddCategoryModal">New Category</button>
                     <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ListCategoriesModal">List Categories</button>
-                    <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#AddTransactionModal">New Transaction</button>
+                    <button type="button" id="btn-confirm" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#CreateTransactionModal">New Transaction</button>
                 </div>
             </div>
         </header>
