Updates to DataModels + a ViewComponent for SelectList for Categories.
Updates to DataModels with changes to Transaction.
Also a ViewComponent to generate a SelectList for Categories in the Partial View of New Transaction.

--- a/MVCBudget.Forser/Views/Home/_CreateTransactionPartial.cshtml
+++ b/MVCBudget.Forser/Views/Home/_CreateTransactionPartial.cshtml
@@ -31,6 +31,9 @@
                         <label asp-for="TransactionDate" class="control-label"></label>
                         <span asp-validation-for="TransactionDate" class="text-danger"></span>
                     </div>
+                    <div>
+                        @await Component.InvokeAsync("CategoriesList")
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-primary" id="SaveBtn">Save</button>
